HEAD
	+ Added support to dynamic objects using p0f as fingerprinting tool
3.4
	+ Set version to 3.4
	+ Clearer error when calling objectMembers with a invalid object id
3.3
	+ Added missing EBox::Exceptions uses
	+ Only unroll member ip range addresses in the addresses() method
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.1
	+ Added menu icon
	+ Add 'userMac' option to EBox::Objects::Members::iptablesSrcParams
3.1
	+ Depend on zentyal-core 3.1
3.0.1
	+ addObject method take ipaddr as default member type
2.3.6
	+ Added EBox::Object::Members class. ObjectAddresses are always
	  with mask, before, addresses from a range were without it
2.3.5
	+ Adapted to new Model management framework
	+ Added clone options
	+ Disallow /32 addresses ending in zero
2.3.4
	+ Added the posibility to create readOnly objects
	+ addObject method now returns the object id
2.3.3
	+ Packaging fixes for precise
2.3.1
	+ Updated Standards-Version to 3.9.2
2.3
	+ Replaced autotools with zbuildtools
2.1.4
	+ Remove mask from CIDR members in
	  EBox::Objects::Model::MemberTable::addresses when mask parameter
	  is set to 1
2.1.3
	+ Removed /zentyal prefix from URLs
2.1.2
	+ Removed use of obsolete LogAdmin
2.1.1
	+ Objects menu moved inside the Network menu
	+ Added IP ranges as object members
	+ objectAddresses method can now return masks if requested
	+ Removed undefined variable warning
2.1
	+ MAC addresses are now unique in MemberTable
1.5.1
	+ Forbid some confusing object's names
1.3.13
	+ Remove migration directory
	+ Do not run migrations from postinst
1.3.12
	+ Add breadcrumbs
1.1
	+ Use new rows() and ids() API
0.12.99
	+ New release
	+ Objects can have the same or a overlapping addresss than other
	objects. However addresses of a object's member cannot overlap
0.12
	+ Use the new EBox::Model::Row API
	+ Added pageTitle to Objects model
	+ Add help to Objects model
0.11.101
	+ New release
0.11.100
	+ New release
0.11.99
	+ New release
0.11