@@ -1,4 +1,5 @@
 HEAD
+	+ Send network inventory to Zentyal Remote if it applies
 	+ Added support to dynamic objects using p0f as fingerprinting tool
 3.4
 	+ Set version to 3.4
